Fixed track tab shift on selection

--- a/public/index.css
+++ b/public/index.css
@@ -631,6 +631,10 @@ div[role="link"] {
   margin-top: 1px;
 }
 
+#selection-container .track-tab {
+  margin-bottom: 1px;
+}
+
 #menu {
   position: absolute;
   right: 0;
